# pmd_test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  game.ini  pmd.sln  pmd.vcxproj  pmd.vcxproj.filters  readme.md
cmake-modules/: FindGLFW.cmake  FindLibOgg.cmake  FindLibVorbis.cmake
data/shaders/: frag.psh  sprite.psh  sprite.vsh  sprite_batch.psh  sprite_batch.vsh  sprite_slow.vsh  vertex.vsh
data/shaders/old/: frag.psh  vertex.vsh
data/shaders/wip/: global.inc  sprite.psh
inc/: util.h
inc/audio/: audio.h
inc/audio_core/: al_common.h  sound_core.h
inc/common/: d_list.h  dynamic_array.h  error.h  exception.h  file_io.h  list_generic.h  list_node.h  list_queue.h  list_types.h  mem_pool.h  node_generic.h  queue.h  rand_num.h  s_list.h  stack.h  stack_error.h  stack_generic.h  stack_types.h  string.h  strlcat.h  strlcpy.h  template.h  timer.h  types.h  vec.h
inc/dungeon/: dungeon_gen.h  dungeon_gen_wip.h  dungeon_manager.h  dungeon_state.h  floor_function.h  pokemon_dungeon_state.h
inc/game/: ai.h  camera.h  display.h  dungeon.h  game.h  hunger.h  index_buffer.h  input.h  item.h  layer.h  move.h  player.h  pokemon.h  renderer.h  renderer2d.h  renderer2d_info.h  single_sprite.h  sprite.h  text.h  tile.h
inc/game/items/: apples.h  bands.h  berries.h  projectiles.h  scarfs.h  seeds.h  tm.h  vitamins.h
inc/game_common/: camera.h  controls_manager.h  display.h  display_manager.h  dungeon.h  dungeon_manager.h  game.h  game_manager.h  health.h  health_manager.h  hunger_manager.h  input.h  item.h  item_manager.h  map.h  move.h  move_manager.h  object.h  player.h  pokemon.h  pokemon_manager.h  renderer.h  renderer2d.h  renderer2d_info.h  shader.h  sound.h  sprite.h  sprites.h  text_manager.h  tile_manager.h  vertex_array.h  vertex_buffer.h
inc/game_common/items/: apples.h  berries.h  chests.h  gummies.h  misc.h  orbs.h  ribbons.h  specs.h
inc/pokemon/: database.h  stats.h
inc/screen/: load_png.h  screen.h
lib/Simple OpenGL Image Library/projects/VC9/: SOIL.sln  SOIL.vcxproj  UpgradeLog.htm
lib/Simple OpenGL Image Library/projects/VC9/Release/: SOIL.lib
lib/Simple OpenGL Image Library/projects/VC9/Release/SOIL.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SOIL.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog
lib/iniparser/include/: dictionary.h
lib/iniparser/lib-vc2015/: iniparser.lib
lib/libogg-1.3.2/lib/x86/: libogg.lib  libogg_static.lib
lib/libogg-1.3.2/win32/VS2010/Win32/Release/: libogg.exp  libogg.lib
lib/libpng-1.6.20/projects/vstudio/: zlib.props
lib/libpng-1.6.20/projects/vstudio/Release/: libpng16.exp  libpng16.lib  zlib.bsc  zlib.lib
lib/libpng-1.6.20/projects/vstudio/Release Library/: libpng16.lib  pngstest.bsc  pngtest.bsc  pngunknown.bsc  pngvalid.bsc  zlib.bsc  zlib.lib
lib/libpng-1.6.20/projects/vstudio/libpng/Release/: png.sbr  pngwin.res
lib/libpng-1.6.20/projects/vstudio/libpng/Release Library/: png.sbr
lib/libpng-1.6.20/projects/vstudio/libpng/Release Library/libpng.tlog/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
lib/libpng-1.6.20/projects/vstudio/libpng/Release/libpng.tlog/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  libpng.lastbuildstate  libpng.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
lib/libpng-1.6.20/projects/vstudio/pnglibconf/Release/pnglibconf.tlog/: pnglibconf.write.1u.tlog
lib/libpng-1.6.20/projects/vstudio/pngstest/Release Library/pngstest.tlog/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pngstest.lastbuildstate  pngstest.write.1u.tlog
lib/libpng-1.6.20/projects/vstudio/pngtest/Release Library/pngtest.tlog/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.read.1.tlog  (+6 more)
lib/libvorbis-1.3.5/lib/: psytune.c
lib/libvorbis-1.3.5/lib/x86/: libvorbis.lib
lib/libvorbis-1.3.6/lib/x86/: libvorbis_static.lib  libvorbisfile.exp  libvorbisfile.lib
lib/libvorbis-1.3.6/x86/: libvorbis.exp  libvorbis.lib  libvorbisfile_static.lib
lib/lode_png/lib/x86/: LodePng.lib
lib/pthreads-w32-2.9.1/include/: pthread.h
src/: main.c
src/audio/: audio.c
src/audio_core/: Wrapper_OGG.cpp  al_common.c  sound_core.c
src/common/: d_list.c  dynamic_array.c  file_io.c  list_generic.c  list_queue.c  lodepng.c  mem_pool.c  node_generic.c  queue.c  rand_num.c  stack.c  stack_generic.c  string.c  strlcat.c  strlcpy.c  timer.c  vec.c
src/dungeon/: dungeon_algorithm.txt  dungeon_gen.c  dungeon_gen_wip.c  dungeon_state.c  floor_function.c  genorator.cpp  pokemon_dungeon_state.c
src/game/: ai.c  camera.c  cvar_manager.c  display.c  dungeon.c  game.c  health.c  hunger.c  index_buffer.c  input.c  item.c  layer.c  menu.c  move.c  object.c  player.c  pokemon.c  renderer.c  renderer2d.c  renderer2d_info.c  shader.c  shop.c  single_sprite.c  sound.c  sprite.c  sprites.c  text.c  tile.c  vertex_array.c  vertex_buffer.c
src/game/items/: apples.c  bands.c  berries.c  gummies.c  misc.c  orbs.c  projectiles.c  ribbons.c  tm.c
src/game_common/: camera.c  controls_manager.c  cvar.c  cvar_manager.c  display.c  display_manager.c  dungeon.c  dungeon_manager.c  game.c  game_manager.c  health.c  health_manager.c  hunger.c  hunger_manager.c  index_buffer.c  input.c  item.c  item_manager.c  menu.c  menu_manager.c  move.c  move_manager.c  object.c  player.c  pokemon.c  pokemon_manager.c  renderer.c  renderer2d.c  renderer2d_info.c  shader.c  shop_manager.c  single_sprite.c  sound.c  sound_manager.c  sprite.c  sprites.c  text.c  tile.c  tile_manager.c  vertex_array.c  (+1 more)
src/game_common/items/: apples.c  bands.c  berries.c  gummies.c  misc.c  projectiles.c  ribbons.c  tm.c  vitamins.c
src/pokemon/: database.c  stats.c
src/screen/: load_png.c  screen.c
(+37 files in other folders)
